--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@graphql-tools/merge": "^9.0.22",
     "bcryptjs": "^3.0.2",
     "connect-mongodb-session": "^5.0.0",
+    "cron": "^4.1.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "graphql": "^16.10.0",
